Too big main top hem fixed [katheroine#39]

--- a/src/assets/stylesheets/site-l.violet.css
+++ b/src/assets/stylesheets/site-l.violet.css
@@ -8,6 +8,7 @@
   --site-name-hem: 42px;
   --site-name-font-size: 80px;
   --site-description-font-size: 26px;
+  --main-top-hem-reset: -36px;
   --body-background-size: 100%;
 
   --controls-height: 46px;
